objects/project_cloud__Stage_Gate_Checklist_Item__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <description>A more in detail description of the Checklist Item</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Stage_Gate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Stage Gate</label>
        <referenceTo>project_cloud__Project_Stage_Gate__c</referenceTo>
        <relationshipLabel>Stage Gate Checklist Items</relationshipLabel>
        <relationshipName>Stage_Gate_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Stage_Gate_Process_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage Gate Process Step</label>
        <referenceTo>project_cloud__Stage_Gate_Process_Step__c</referenceTo>
        <relationshipLabel>Stage Gate Checklist Items</relationshipLabel>
        <relationshipName>Stage_Gate_Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stage Gate Checklist Item</label>
    <nameField>
        <label>Stage Gate Checklist Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stage Gate Checklist Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>